hard-gists/a536bfa68b066c6fd593/run.log
=== Docker Run Log for a536bfa68b066c6fd593 ===
Started at: Mi 29. Okt 18:55:30 CET 2025

[2025-10-29 18:55:31] START: Running container for a536bfa68b066c6fd593
[2025-10-29 18:55:31] SUCCESS: Container e9440144d82ccf1035a92bf5547d294e5453994ba52ef78778da9e053ee77ff8 started for a536bfa68b066c6fd593
=== Container logs for a536bfa68b066c6fd593 ===
  File "/snippet.py", line 64
    print 'EMAIL\tNAME'
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a536bfa68b066c6fd593 ===
[2025-10-29 18:55:33] INFO: Container e9440144d82ccf1035a92bf5547d294e5453994ba52ef78778da9e053ee77ff8 has stopped
